--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
     "nodemon": "^2.0.15"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "server:dev": "nodemon server.js"
+
   },
   "name": "server",
   "version": "1.0.0",
